  * preliminary matroska support
  * support for AAC audio in RealMedia files
  * implement chapter skipping in ogm files
  * more RTP/UDP plugin fixes
  * fix endianness problem in OSD texts (using UCS-2LE or UCS-2BE encoding)
  * raw AAC fixes and support for 5.1 AAC streams
  * AVI demuxer OpenDML (AVI2.0) support
  * fix unscaled OSD for Kaffeine
  * new ffmpeg decoders activated:
    * Sierra VMD audio and video
    * Duck TrueMotion v1 (DUCK)
    * Planar RGB (8BPS)
    * Lossless Codecs (MSZH & ZLIB)
    * ASV v1/v2
    * ATI VCR1
    * Real Video 2.0
  
xine-lib (1-rc3a)
  * new subtitle formats: jacobsub, subviewer 2.0, subrip 0.9
  * auto hiding of the subtitles
  * raw AAC file demuxer
  * fix starvation problem with kernel 2.6 NPTL
  * not overwrite the files by saving plugin
  * deinterlace fixes (detect mpeg1 as progressive and correct handling
    of top_field_first)
  * ogg/ogm demuxer fixes for big endian machines
  * update win32 port, working ffmpeg decode plugin
  * fixed segfault when running in verbose mode
	
xine-lib (1-rc3)
  * fix dvd menu blending when using tvtime plugin (yuy2 blend)
  * fix problems with some more elaborate post plugin setups
  * discontinuity problems in audio only streams fixed
  * fix a bug in the id3v2.2 parsing code
  * fix best streams choice in mmsh
  * updated internal copy of ffmpeg with a lot of warning fixes
  * help texts for video post plugins
  * fix pts handling bug that caused long freezing in some animated dvd menus
  * configfile beautification (values set to default are now commented out)
  * fix some more problems with jumpy non-MPEG NTSC streams on the DXR3
  * handle comments in rpm playlist files
  * realaudio demuxer improvements including support for 14.4 codec and reading
    meta info
  * post plugin for ffmpeg libpostprocess (pp)
  * updated win32 MSVC port
  * default to menu button 1, if an invalid button is set
    (fixes main menu of "Alice in Wonderland" RC2)