@@ -2005,6 +2005,7 @@ echo "   - vox           - nsf"
 echo "   - nsv           - 4xm"
 echo "   - ac3           - aac"
 echo "   - iff           - matroska"
+echo "   - vmd"
 if test x"$enable_asf" = "xyes"; then
   echo "   - asf"
 fi
